WIP: Added separate filter menu and fixed visiblity #33

--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -8,6 +8,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  min-width: 33%;
 }
 
 .item-label--type {
@@ -15,4 +16,11 @@
   padding-left: 1rem;
   text-transform: uppercase;
 }
-  
+
+ion-select {
+  max-width: 100%;
+}
+
+.popover-content {
+  width: 80% !important;
+}
